tests/models/struct/unnamed/i8/fail/min_items.rs
use dade::model;
#[model]
struct TestModel (
   #[field(min_items = 2)]
    i8
);
fn main() {}
